--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,11 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Главная</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Spring Security Example</title>
 </head>
 <body>
+<h1>Welcome to Index PAGE!</h1>
 
-<div>
 
-    <h3>Главная страница </h3>
-
-    <h4><a href="/login">Войти</a></h4>
-    <h4><a href="/registration">Зарегистрироваться</a></h4>
-    <h4><a href="/logout">Выйти</a></h4>
-    <h4><a href="/admin/allUsers">Пользователи (только админ)</a></h4>
-    <h4><a href="/user/oneUser">Пользователь (для юзера)</a></h4>
-</div>
 </body>
 </html>
