--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en">
 <head>
-    <title>Spring Security Example</title>
+    <title>User page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+
+
+<div>
+    <table class="table table-dark">
+        <tr>
+            <td>ID</td>
+            <td>NICKNAME</td>
+            <td>EMAIL</td>
+            <td>OCCUPATION</td>
+        </tr>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.getId()}"></td>
+            <td th:text="${user.getNickname()}"></td>
+            <td th:text="${user.getEmail()}"></td>
+            <td th:text="${user.getOccupation()}"></td>
+            <td><button><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a></button></td>
+            <td> <form th:method="DELETE" th:action="@{/{id}/delete/(id=${user.getId()})}">
+                <input type="submit" value="Delete"></form></td>
+
+        </tr>
+    </table>
+</div>
+<div>
+    <form  th:action="@{/logout}" method="post">
+        <input type="submit" value="Logout">
+    </form>
+</div>
 
 
 </body>
