--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -18,7 +18,7 @@
         </tr>
         <tr th:each="user : ${users}">
             <td th:text="${user.getId()}"></td>
-            <td th:text="${user.getNickname()}"></td>
+            <td th:text="${user.getUsername()}"></td>
             <td th:text="${user.getEmail()}"></td>
             <td th:text="${user.getOccupation()}"></td>
             <td><button><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a></button></td>
