--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -22,7 +22,7 @@
     </tr>
     <tr th:each="user : ${users}">
       <td th:text="${user.getId()}"></td>
-      <td th:text="${user.getNickname()}"></td>
+      <td th:text="${user.getUsername()}"></td>
       <td th:text="${user.getEmail()}"></td>
       <td th:text="${user.getOccupation()}"></td>
       <td>
