--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>User page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -8,32 +8,32 @@
 <body>
 
 
-<div>
-    <table class="table table-dark">
+<table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Occupation</th>
+        <th scope="col">Email</th>
+        <th scope="col">Password</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <div th:object="${user}">
         <tr>
-            <td>ID</td>
-            <td>NICKNAME</td>
-            <td>EMAIL</td>
-            <td>OCCUPATION</td>
+            <th scope="row" th:text="${user.getId()}">id</th>
+            <td th:text="${user.getName()}">Name</td>
+            <td th:text="${user.getOccupation()}">Occupation</td>
+            <td th:text="${user.getEmail()}">Email</td>
+            <td th:text="${user.getPassword()}">Password</td>
         </tr>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.getId()}"></td>
-            <td th:text="${user.getUsername()}"></td>
-            <td th:text="${user.getEmail()}"></td>
-            <td th:text="${user.getOccupation()}"></td>
-            <td><button><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a></button></td>
-            <td> <form th:method="DELETE" th:action="@{/{id}/delete/(id=${user.getId()})}">
-                <input type="submit" value="Delete"></form></td>
-
-        </tr>
-    </table>
-</div>
-<div>
-    <form  th:action="@{/logout}" method="post">
-        <input type="submit" value="Logout">
+    </div>
+    </tbody>
+    <a href="javascript: document.logoutForm.submit()" role="menuitem"> Logout</a>
+    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+        <input hidden type="submit" value="Sign Out"/>
     </form>
-</div>
-
 
 </body>
 </html>
