--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,39 +1,79 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en">
 <head>
-    <title>User page</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Admin panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+<body class="bg-light text-dark">
 
 
-<table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Name</th>
-        <th scope="col">Occupation</th>
-        <th scope="col">Email</th>
-        <th scope="col">Password</th>
-    </tr>
-    </thead>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid" th:object="${user}">
+        <a class="navbar-brand fw-bold" th:text="${user.getEmail()}">Email</a>
+        <label class="text-white bg-dark">with roles:</label>
+        <span th:each="role: ${user.getRoles()}" th:utext="${role.getRole().replaceFirst('ROLE_', '')}"
+              class="text-white bg-dark ms-2" aria-current="page">&nbsp;</span>
+        <div class="navbar-nav ms-auto">
+            <a th:href="@{/logout}" class="nav-link active" aria-current="page"> Logout</a>
+        </div>
 
-    <tbody>
-    <div th:object="${user}">
-        <tr>
-            <th scope="row" th:text="${user.getId()}">id</th>
-            <td th:text="${user.getName()}">Name</td>
-            <td th:text="${user.getOccupation()}">Occupation</td>
-            <td th:text="${user.getEmail()}">Email</td>
-            <td th:text="${user.getPassword()}">Password</td>
-        </tr>
     </div>
-    </tbody>
-    <a href="javascript: document.logoutForm.submit()" role="menuitem"> Logout</a>
-    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
-        <input hidden type="submit" value="Sign Out"/>
-    </form>
+</nav>
+
+
+
+
+
+<div class="d-flex align-items-start">
+    <div class="nav flex-column nav-pills me-3" style="background-color: #FFF; width: 15%; height: 100vh" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <button class="nav-link active btn-lg rounded-1" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">User</button>
+    </div>
+    <div class="tab-content p-3 bg-light text-dark align-content-center"  style="width: 85%" id="v-pills-tabContent">
+
+        <div class="tab-pane fade show active bg-light text-dark" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+            <h1> User information-page </h1>
+
+            <div class="text-bg-light p-3 border"><h5>About user</h5></div>
+            <div class="col p-3" style="background:#FFF;">
+
+                <table class="table table-striped p-3">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Role</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+
+                    <tr>
+                        <th scope="row" th:text="${user.getId()}">id</th>
+                        <td th:text="${user.getName()}">Name</td>
+                        <td th:text="${user.getSurname()}">Surname</td>
+                        <td th:text="${user.getAge()}">Age</td>
+                        <td th:text="${user.getEmail()}">Password</td>
+                        <td><span th:each="role: ${user.getRoles()}" th:utext="${role.getRole().replaceFirst('ROLE_', ' ')}">
+                    </span> </td>
+                    </tr>
+
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
+</html>
 </html>
